# lite-nvr

./: .env.example  .gitignore  AGENT.md  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  Makefile  OVERVIEW.md  README.md
.agents/rules/: ui.md
.cargo/: config.toml
.cursor/skills/frontend-design/: LICENSE.txt  SKILL.md
.github/workflows/: frontend-check.yml  rust-check.yml
crates/ffmpeg-bus/src/: audio_mixer.rs  audio_mixer_test.rs  bsf.rs  bsf_test.rs  bus.rs  bus_test.rs  decoder.rs  device.rs  encoder.rs  frame.rs  frame_test.rs  hw.rs  input.rs  packet.rs  scaler.rs  stream.rs
crates/gb28181/: Cargo.toml
crates/gb28181/src/: auth.rs  client.rs  client_test.rs  encoding.rs  endpoint.rs  error.rs  event.rs  gbcode.rs  lib.rs  manscdp.rs  ptz.rs  registrar.rs  sdp.rs  server.rs  server_test.rs  types.rs
crates/gb28181/tests/: loopback.rs  ptz_loopback.rs
crates/media-pipe-core/: Cargo.toml
crates/media-pipe-core/src/: lib.rs  pipe.rs  pipe_test.rs  stream.rs  types.rs
crates/media-pipe-zlm/: Cargo.toml
crates/media-pipe-zlm/src/: lib.rs
crates/nvr-asr/: Cargo.toml  README.md
crates/nvr-asr/src/: engine.rs  engine_test.rs  lib.rs  lib_test.rs  main.rs  wav.rs  wav_test.rs
crates/nvr-audio-mixer/: Cargo.toml
crates/nvr-audio-mixer/src/: bus.rs  lib.rs  source.rs
crates/nvr-compositor/: Cargo.toml
crates/nvr-compositor/src/: compositor.rs  compositor_test.rs  layout.rs  lib.rs  main.rs  source.rs  source_test.rs
crates/nvr-detect/: Cargo.toml  README.md
crates/nvr-detect/examples/: detect-compare.rs
crates/nvr-detect/src/: coco.rs  config.rs  config_test.rs  detector.rs  lib.rs  set.rs  set_test.rs  types.rs  types_test.rs  usls_backend.rs
crates/nvr-detect/tests/: live.rs
crates/nvr-onvif/: Cargo.toml
crates/nvr-onvif/src/: camera.rs  config.rs  config_test.rs  discovery.rs  lib.rs  types.rs  types_test.rs  uri.rs  uri_test.rs
crates/nvr-onvif/tests/: live.rs
crates/nvr-recorder/: Cargo.toml
crates/nvr-recorder/examples/: record.rs
crates/nvr-recorder/src/: config.rs  config_test.rs  info.rs  info_test.rs  lib.rs  recorder.rs  recorder_test.rs  rotation.rs  rotation_test.rs  segment.rs  segment_test.rs
crates/nvr-recorder/tests/: smoke.rs
crates/nvr-switcher/: Cargo.toml
crates/nvr-switcher/src/: lib.rs  main.rs  program.rs  sink.rs  source.rs  switcher.rs
crates/nvr-yt-dlp/: Cargo.toml
crates/nvr-yt-dlp/src/: lib.rs  resolve.rs  resolve_test.rs
crates/xiaomi/: Cargo.toml
crates/xiaomi/src/: cloud.rs  crypto.rs  cs2.rs  device.rs  lib.rs  miss.rs
docs/: README.md  dashboard-rules.md  ffmpeg_bus_architecture.md  lite_nvr_architecture.md  nvr_dashboard_architecture.md  nvr_db_architecture.md
docs/superpowers/notes/: 2026-07-02-gb28181-p1-3-smoke-test.md  2026-07-02-gb28181-p2-ptz-smoke-test.md  2026-07-02-gb28181-p4a-smoke-test.md
docs/superpowers/plans/: 2026-07-01-gb28181-p1-1-core.md  2026-07-02-gb28181-p1-2-facades.md  2026-07-02-gb28181-p1-3-nvr-bridge.md  2026-07-02-gb28181-p2-ptz.md  2026-07-15-nvr-recorder.md  (+6 more)
examples/dummy-camera/: Cargo.toml  README.md
examples/dummy-camera/assets/: sample.h264
examples/dummy-camera/src/: h264.rs  main.rs  ps.rs  rtp.rs
examples/dummy-onvif-camera/: Cargo.toml  README.md
examples/dummy-onvif-camera/src/: auth.rs  auth_test.rs  config.rs  config_test.rs  discovery.rs  discovery_test.rs  main.rs  responses.rs  responses_test.rs  soap.rs  soap_test.rs
examples/dummy-rtsp-camera/: Cargo.toml
examples/dummy-rtsp-camera/src/: main.rs  main_test.rs
ffmpeg-bus/: Cargo.toml  README.md  output_rawvideo_test.h264
ffmpeg-bus/src/: audio_mixer.rs  bsf.rs  bus.rs  bus_test.rs  decoder.rs  device.rs  encoder.rs  frame.rs  hw.rs  input.rs  lib.rs  main.rs  metadata.rs  output.rs  packet.rs  sink.rs  stream.rs
ffmpeg-bus/src/media/: frame.rs  stream.rs
lite-nvr/: Cargo.toml
lite-nvr/src/: api.rs  db.rs  main.rs  zlm.rs
lite-nvr/src/handler/: device.rs  media_pipe.rs  mod.rs  system.rs  user.rs
lite-nvr/src/media/: mod.rs  pipe.rs  pipe_test.rs  types.rs
lite-nvr/src/zlm/: server.rs
nvr/: Cargo.toml  build.rs
nvr-dashboard/: Cargo.toml  build.rs
nvr-dashboard/app/: .gitignore  CLAUDE.md  RULES.md  env.d.ts  eslint.config.ts  index.html  package-lock.json  package.json  stylelint.config.mjs  vite.config.ts
nvr-dashboard/src/: lib.rs  lib_test.rs
nvr-db/: Cargo.toml
nvr-db/migrations/: 20260210_init.sql  20260317_record_segment.sql  20260702_transport.sql
nvr-db/src/: config.rs  db.rs  device.rs  kv.rs  lib.rs  migrations.rs  record_segment.rs  session.rs  session_test.rs  transport_job.rs  transport_target.rs  user.rs  user_test.rs
nvr-server/: Cargo.toml
nvr-server/src/: api.rs  main.rs
nvr/src/: api.rs  auth.rs  auth_test.rs  cleanup.rs  config.rs  db.rs  livestream.rs  livestream_test.rs  main.rs  manager.rs  metrics.rs  proxy.rs  xiaomi.rs
nvr/src/asr/: api.rs  hub.rs  mod.rs  resample.rs  resample_test.rs  smoke_test.rs  tap.rs
nvr/src/audiomixer/: api.rs  mod.rs
nvr/src/compositor/: api.rs  mod.rs
nvr/src/detect/: api.rs  api_test.rs  convert.rs  convert_test.rs  hub.rs  hub_test.rs  mod.rs  result.rs  tap.rs  tap_test.rs
nvr/src/gb/: api.rs  bridge.rs  bridge_test.rs  config.rs  mod.rs  receiver.rs  stream_map.rs
nvr/src/handler/: device.rs  media_pipe.rs  mod.rs  playback.rs  system.rs  user.rs
nvr/src/init/: device.rs
nvr/src/media/: pipe.rs  pipe_test.rs  stream.rs  types.rs
nvr/src/onvif/: api.rs  api_test.rs  ingest.rs  mod.rs  mod_test.rs
nvr/src/program/: api.rs  mod.rs
nvr/src/transport/: api.rs  backend.rs  config.rs  config_test.rs  ftp.rs  ftp_test.rs  mod.rs  smb.rs  worker.rs
nvr/src/zlm/: cmd.rs  cmd_test.rs  media_cache.rs  media_cache_test.rs  mod.rs  server.rs
rest/: api.rest
scripts/: detect_e2e.sh  download_asr_models.sh  download_sherpa_onnx_libs.sh  pre_install_deps.sh  run_xvfb.sh  start_dummy_camera.sh  start_dummy_rtsp_camera.sh  start_livesrc_push.sh
src/: api.rs  main.rs  manager.rs  pipe.rs  pipe_v2.rs  zlm.rs
src/media/: mod.rs  pipe.rs  pipe_test.rs  stream.rs  types.rs
(+57 files in other folders)
