[package]
name = "lite-nvr"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13", features = ["json"] }
ez-ffmpeg = { version = "0.9", features = ["async"] }
ffmpeg-sys-next = "7"
axum = "0.8"
tokio-util = "0.7"
futures = "0.3"
bytes = "1"
jpeg-encoder = "0.6"
# rszlm = { git = "https://github.com/BenLocal/rszlm.git" }


[workspace]
members = ["ffmpeg-bus"]
