[workspace]
members = ["ffmpeg-bus", "nvr", "nvr-dashboard", "nvr-db"]
resolver = "1"

[workspace.dependencies]
# Media
ffmpeg-next = { version = "8" }
rszlm = { git = "https://github.com/BenLocal/rszlm.git" }
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"
# Web / HTTP
axum = "0.8"
axum-embed = "0.1"
reqwest = "0.13.2"
# Serialization / data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
uuid = "1.21.0"
rust-embed = "8"
# Database
turso = "0.6.1"
# Platform (Linux only)
tokio-linux-video = "0.1.1"
# Utilities
anyhow = "1"
log = "0.4"
env_logger = "0.11"
argon2 = "0.5"
harsh = "0.2"
md5 = "0.8"
