[workspace]
members = [
    "crates/ffmpeg-bus",
    "nvr",
    "nvr-dashboard",
    "nvr-db",
    "crates/gb28181",
    "crates/media-pipe-core",
    "crates/media-pipe-zlm",
    "crates/nvr-compositor",
    "crates/nvr-switcher",
    "crates/xiaomi",
    "examples/dummy-camera",
]
resolver = "1"

[workspace.dependencies]
# Media
ffmpeg-next = { version = "8" }
rszlm = { git = "https://github.com/BenLocal/rszlm.git" }
# Async runtime
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
tokio-stream = "0.1"
futures = "0.3"
futures-util = "0.3"
# Web / HTTP
axum = "0.8"
tower = "0.5"
reqwest = "0.13.2"
# Serialization / data
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
bytes = "1"
uuid = "1.21.0"
rust-embed = "8"
# Database
turso = "0.6.1"
# Platform (Linux only)
tokio-linux-video = "0.1.1"
# Utilities
anyhow = "1"
log = "0.4"
env_logger = "0.11"
argon2 = "0.5"
harsh = "0.2"
md5 = "0.8"
# Xiaomi camera (go2rtc port)
chacha20 = "0.9"
dryoc = "0.7"
hex = "0.4"
rand = "0.8"
base64 = "0.22"
md-5 = "0.10"
sha1 = "0.10"
sha2 = "0.10"
thiserror = "2"
quick-xml = { version = "0.37", features = ["serialize"] }
encoding_rs = "0.8"
tracing = "0.1"
rsipstack = "0.5"
