[package]
name = "ffmpeg-bus"
version = "0.1.0"
edition = "2024"

[dependencies]
ffmpeg-next = { workspace = true, features = ["device"] }
tokio = { workspace = true }
futures = { workspace = true }
anyhow = { workspace = true, features = ["backtrace"] }
bytes = { workspace = true }
tokio-util = { workspace = true }
log = { workspace = true }
tokio-stream = { workspace = true, features = ["sync"] }
futures-util = { workspace = true }
