[package]
name = "lite-nvr"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio = { version = "1", features = ["full"] }
log = "0.4"
env_logger = "0.11"
anyhow = "1.0.101"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", features = ["json"] }
ffmpeg-sys-next = "7"
axum = "0.8"
tokio-util = "0.7"
futures = "0.3"
bytes = "1.11.1"
ffmpeg-bus = { path = "../ffmpeg-bus" }
nvr-db = { path = "../nvr-db" }
rszlm = { git = "https://github.com/BenLocal/rszlm.git", optional = true }

[features]
default = ["zlm"]
zlm = ["dep:rszlm"]
