[package]
name = "nvr-db"
version = "0.1.0"
edition = "2024"

[dependencies]
turso = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
rust-embed = { workspace = true }
chrono = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
argon2 = { workspace = true }
