[package]
name = "nvr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nvr"
path = "src/main.rs"
test = false

[dependencies]
tokio = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
axum = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
ffmpeg-bus = { path = "../ffmpeg-bus" }
nvr-db = { path = "../nvr-db" }
nvr-dashboard = { path = "../nvr-dashboard" }
media-pipe-core = { path = "../crates/media-pipe-core" }
media-pipe-zlm = { path = "../crates/media-pipe-zlm", optional = true }
xiaomi = { path = "../crates/xiaomi" }
rszlm = { workspace = true, optional = true }
uuid = { workspace = true }
turso = { workspace = true }
argon2 = { workspace = true }
harsh = { workspace = true }
md5 = { workspace = true }

# Only built when target is Linux (see also build.rs for feature "linux" cfg)
[target.'cfg(target_os = "linux")'.dependencies]
tokio-linux-video = { workspace = true }

[features]
default = ["zlm"]
zlm = ["dep:rszlm", "dep:media-pipe-zlm"]
# Set by build.rs when compiling for Linux; satisfies check-cfg
linux = []
