[package]
name = "nvr"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "nvr"
path = "src/main.rs"
test = true

[dependencies]
tokio = { workspace = true }
async-trait = "0.1"
log = { workspace = true }
env_logger = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
axum = { workspace = true, features = ["ws"] }
socketioxide = "0.18"
tokio-tungstenite = "0.29"
hyper-util = { version = "0.1", features = ["client-legacy", "http1", "tokio"] }
tokio-util = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true }
# System performance metrics (CPU / memory / network) for the dashboard homepage.
sysinfo = "0.33"
ffmpeg-bus = { path = "../crates/ffmpeg-bus" }
ffmpeg-next = { workspace = true }
nvr-db = { path = "../nvr-db" }
nvr-dashboard = { path = "../nvr-dashboard" }
nvr-asr = { path = "../crates/nvr-asr" }
nvr-switcher = { path = "../crates/nvr-switcher" }
nvr-compositor = { path = "../crates/nvr-compositor" }
nvr-audio-mixer = { path = "../crates/nvr-audio-mixer" }
media-pipe-core = { path = "../crates/media-pipe-core" }
nvr-yt-dlp = { path = "../crates/nvr-yt-dlp" }
media-pipe-zlm = { path = "../crates/media-pipe-zlm" }
xiaomi = { path = "../crates/xiaomi" }
gb28181 = { path = "../crates/gb28181" }
rszlm = { workspace = true }
uuid = { workspace = true }
turso = { workspace = true }
harsh = { workspace = true }
md5 = { workspace = true }
# Record-segment transport backends (blocking clients, driven via spawn_blocking).
suppaftp = "6"
# SMB backend; optional because it links the libsmbclient system library.
pavao = { version = "0.2", optional = true }

# Only built when target is Linux (see also build.rs for feature "linux" cfg)
[target.'cfg(target_os = "linux")'.dependencies]
tokio-linux-video = { workspace = true }

[features]
# Set by build.rs when compiling for Linux; satisfies check-cfg
linux = []
# SMB transport backend. Off by default so the base build needs no Samba dev
# library (libsmbclient); enable with `--features smb`.
smb = ["dep:pavao"]

[dev-dependencies]
# Drives the auth middleware end-to-end in tests (Router::oneshot).
tower = { workspace = true, features = ["util"] }
