[package]
name = "xiaomi"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = { workspace = true }
chacha20 = { workspace = true }
dryoc = { workspace = true }
hex = { workspace = true }
rand = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
serde = { workspace = true }
serde_json = { workspace = true }
base64 = { workspace = true }
md-5 = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
log = { workspace = true }
