[package]
name = "dummy-rtsp-camera"
version = "0.1.0"
edition = "2024"
publish = false
description = "A dummy RTSP camera: thin launcher around the external oddity-rtsp-server binary, serving a looping H.264 test clip."

[dependencies]
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
which = { workspace = true }
